# nix-python-example

./: .envrc  .gitignore  flake.nix  pyproject.toml
nix_tester/: app.py
tests/: test_app.py  test_nix_tester.py
