[tool.poetry]
name = "nix-tester"
version = "0.1.0"
description = ""
authors = ["Zach Coyle <zach.coyle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
WeasyPrint = "^52.2"
Flask = "^1.1.2"
Flask-SSLify = "^0.1.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
hypothesis = "^6.1.1"

[tool.poetry.scripts]
nix-tester = "nix_tester.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
